fix: prevent image stretching in about section by using background-size: contain

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -369,20 +369,23 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .about__image {
-  background-size: 100% 100%;
-  background-position: center;
   border: var(--border-thick);
   box-shadow: var(--shadow-offset) var(--shadow-offset) 0 var(--color-primary);
   background-color: transparent;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: auto;
+  height: auto;
 }
 
 .about__image--1 {
   position: absolute;
   bottom: 8%;
   right: 15%;
-  width: 45%;
-  height: 40%;
+  width: 300px;
+  height: 200px;
   background-image: url('../images/7c18eef0-2694-4241-aadd-2e9fa2d0d8ae.png');
+  background-size: contain;
   z-index: 1;
 }
 
@@ -390,9 +393,10 @@ h1, h2, h3, h4, h5, h6 {
   position: absolute;
   top: 8%;
   left: 15%;
-  width: 45%;
-  height: 40%;
+  width: 300px;
+  height: 200px;
   background-image: url('../images/d88af4ef-e380-4b56-96c2-71197a7a6f72.png');
+  background-size: contain;
   z-index: 2;
 }
 
@@ -991,10 +995,10 @@ h1, h2, h3, h4, h5, h6 {
   .about__image--1,
   .about__image--2 {
     position: static;
-    width: 100%;
+    width: 300px;
     height: 200px;
     margin-bottom: var(--spacing-md);
-    background-size: 100% 100%;
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
     background-color: transparent;
